# aixue

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
data/question_bank/: import_cmm_math.py  import_tal_scq5k.py
docs/: aixue-project.md  brainstorm-gemini-math-video.md  research-industry-analysis.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/tests/: chat-message.test.tsx  image-lightbox.test.tsx  ocr-expand-panel.test.tsx  types.test.ts
rpiv/: brainstorm-summary-aixue-mvp.md  brainstorm-summary-cost-optimization.md  research-aixue-mvp.md  research-cost-optimization.md
rpiv/archive/: brainstorm-summary-aixue-mvp.md  brainstorm-summary-cost-optimization.md  brainstorm-summary-image-preview-ocr.md  brainstorm-summary-multi-question-detection.md  code-review-cost-optimization.md  code-review-image-preview-ocr.md  code-review-multi-question-detection.md  code-review-mvp-fixes.md  delivery-report-cost-optimization.md  delivery-report-image-preview-ocr.md  delivery-report-multi-question-detection.md  feature-multi-question-detection.md  plan-cost-optimization.md  plan-image-preview-ocr.md  plan-multi-question-detection.md  prd-aixue-mvp.md  prd-cost-optimization.md  prd-image-preview-ocr.md  prd-multi-question-detection.md  research-aixue-mvp.md  research-cost-optimization.md  research-image-preview-ocr.md  research-multi-question-detection.md  test-spec-aixue-mvp.md  test-specs-cost-optimization.md  (+6 more)
src/aixue/: main.py  (+3 more)
tests/: conftest.py
(+100 files in other folders)
