[project]
name = "aixue"
version = "0.1.0"
description = "AIXue - AI 辅助学生学习的教育平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "sympy>=1.13.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "pillow>=11.0.0",
    "httpx>=0.27.0",
    "antlr4-python3-runtime==4.11.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aixue"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
]
